--- a/src/pages/invite/invite.css
+++ b/src/pages/invite/invite.css
@@ -14,7 +14,7 @@
 .body-text
 {
   font-size: 15px;
-  font-family: 'Poppins-Medium', sans-serif !important;
+  font-family: 'grit_sansbold' !important;
   color: #414141;
   padding-top: 8px;
 }
