--- a/src/pages/order-confirmation/order-confirmation.css
+++ b/src/pages/order-confirmation/order-confirmation.css
@@ -139,8 +139,8 @@ h6.white {
 }
 
 .order-details h2{
-  font-family: 'Poppins-Bold', sans-serif !important;
-  color: #214F66;
+  font-family: 'sunbornsans_one' !important;
+  color: #062C43;
   font-size: 36px !important;
 }
 
