--- a/src/components/order-confirm-card/order-confirm-card.css
+++ b/src/components/order-confirm-card/order-confirm-card.css
@@ -7,7 +7,7 @@
 
 .heading-one{
   color: #0075BF;
-    font-family: 'Poppins-Medium' !important;
+  font-family: 'grit_sansbold' !important;
     font-size: 14px !important;
     font-weight: 400;
     text-transform: uppercase;
