--- a/src/components/password/index.css
+++ b/src/components/password/index.css
@@ -22,7 +22,7 @@
   text-align: left;
 }
 .bday-text {
-  font-family: 'Poppins-Bold';
+  font-family: 'sunbornsans_one' !important;
   padding-right: 10px;
 }
 .birthday-button span {
@@ -30,7 +30,7 @@
 }
 .body-text {
   font-size: 15px;
-  font-family: 'Poppins-Medium', sans-serif !important;
+  font-family: 'grit_sansbold' !important;
   color: #414141;
   padding-top: 8px;
 }
