--- a/src/components/payment-info/payment-info.css
+++ b/src/components/payment-info/payment-info.css
@@ -39,7 +39,7 @@
   top: 45px;
 }
 .add-credit-card-label {
-  font-family: 'Poppins-Regular', sans-serif !Important;
+  font-family: 'libre_franklinlight' !important;
   font-size: 14px !important;
 }
 .payment-form .card-fields {
@@ -203,7 +203,7 @@ input[type=number] {
 .modal-header .heading {
   color: rgba(0, 0, 0, 0.87);
   margin: 0;
-  font-family: "Roboto","Helvetica","Arial",sans-serif !important;
+  font-family: 'sunbornsans_one' !important;
   font-weight: 500;
   font-size: 1.25rem !important;
   line-height: 1.6;
@@ -213,8 +213,8 @@ input[type=number] {
 }
 
 .mobile-field-label {
-  font-family: 'Poppins-Bold', sans-serif !important;
+  font-family: 'sunbornsans_one' !important;
   padding: 20px 0px 0px 9px !important;
-  color: #214F66 !important;
+  color: #062C43 !important;
   font-size: 10px !important;
 }
