--- a/src/components/recent-orders/index.css
+++ b/src/components/recent-orders/index.css
@@ -15,7 +15,7 @@
 }
 .order-history-card .card-panel .order-date {
   font-size: 11px;
-  font-family: 'Poppins-Medium', sans-serif !important;
+  font-family: 'grit_sansbold' !important;
   display: block;
   margin-bottom: -2px;
 }
@@ -25,7 +25,7 @@
 }
 .order-history-card .card-panel .order-name {
   font-size: 20px;
-  font-family: 'Poppins-Medium', sans-serif !important;
+  font-family: 'grit_sansbold' !important;
   display: block;
   color: #414141;
   padding-bottom: 8px;
@@ -33,7 +33,7 @@
 
 .order-history-card .card-panel .order-detail {
   font-size: 15px;
-  font-family: 'Poppins-Medium', sans-serif !important;
+  font-family: 'grit_sansbold' !important;
   display: block;
   color: #414141;
   padding-bottom: 8px;
@@ -45,7 +45,7 @@
 
 .order-history-card .card-panel .order-Link {
   font-size: 15px;
-  font-family: 'Poppins-Bold', sans-serif !important;
+  font-family: 'sunbornsans_one' !important;
   display: block;
   color: #2e75bf;
   padding-bottom: 0px;
