--- a/src/components/register-confirmation/register-confirmation.css
+++ b/src/components/register-confirmation/register-confirmation.css
@@ -76,7 +76,7 @@
 
 .fav-conf-error-message {
   padding: 0;
-  font-family: "Roboto","Helvetica","Arial",sans-serif;
+  font-family: 'sunbornsans_one' !important;
   font-weight: 400;
   font-size: 0.75rem;
   line-height: 1.66;
