--- a/src/pages/forgot-password/forgot.css
+++ b/src/pages/forgot-password/forgot.css
@@ -51,7 +51,7 @@
   display: block;
 }
 .login-content .label.bold {
-  font-family: 'Poppins-Bold', sans-serif !important;
+  font-family: 'sunbornsans_one' !important;
   font-size: 15px !important;
   margin-top: 0px;
   text-align: center;
@@ -63,7 +63,7 @@
 .login-content .caption-grey {
   font-size: 12px;
   text-decoration: none;
-  font-family: 'Poppins-Regular' !important;
+  font-family: 'libre_franklin' !important;
   margin-left: 5px;
 }
 
