--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -6,8 +6,8 @@
 
 legend.heading-ui, h2.heading-ui {
   font-size: 24px;
-  font-family: 'Poppins-Bold', sans-serif !important;
-  color: #214f66;
+  font-family: 'sunbornsans_one' !important;
+  color: #062C43;
   text-transform: uppercase;
 }
 
@@ -18,15 +18,15 @@ margin-bottom: 20px;
 }
 
 .product-detail h2.heading {
-  font-family: 'Poppins-Medium', sans-serif !important;
+  font-family: 'grit_sansbold' !important;
   padding-bottom: 15px;
   font-size: 32px;
-  color: #214f66;
+  color: #062C43;
   margin-top: 14px;
 }
 
 .product-detail .label.bold {
-  font-family: 'Poppins-Bold', sans-serif !important;
+  font-family: 'sunbornsans_one' !important;
   font-size: 18px !important;
   text-transform: capitalize !important;
   line-height: 1.2;
@@ -34,16 +34,16 @@ margin-bottom: 20px;
 
 .product-detail .desc {
   margin-bottom: 25px;
-  color: #214f66;
-  font-family: 'Poppins-Regular', sans-serif !important;
+  color: #062C43;
+  font-family: 'libre_franklin' !important;
   font-size: 16px !important;
   white-space: pre-line;
 }
 
 .product-detail .price {
-  font-family: 'Poppins-Bold', SansSerif !important;
+  font-family: 'sunbornsans_one' !important;
   margin-bottom: 25px;
-  color: #214f66;
+  color: #062C43;
   font-size: 16px !important;
 }
 
@@ -56,7 +56,7 @@ margin-bottom: 20px;
 }
 
 .product-detail .single-product .custom-btn {
-  font-family: 'Poppins-Bold', sans-serif !important;
+  font-family: 'sunbornsans_one' !important;
   float: right;
   font-size: 13px;
   color: #1781c4;
@@ -86,7 +86,7 @@ input[type='check']:checked+label {
   text-transform: uppercase;
   color: #0069aa;
   font-weight: 500;
-  font-family: 'Poppins-Medium', sans-serif !important;
+  font-family: 'grit_sansbold' !important;
   font-size: 18px;
   padding-bottom: 10px;
 }
@@ -130,7 +130,7 @@ input[type='check']:checked+label {
 }
 
 .product-detail .quantity button {
-  font-family: 'Poppins-Regular' !important;
+  font-family: 'libre_franklin' !important;
   font-size: 30px;
   color: #414141;
 }
@@ -240,7 +240,7 @@ input[type='check']:checked+label {
   width: 100%;
   box-sizing: border-box;
   border-radius: 10px;
-  font-family: 'Poppins-Medium';
+  font-family: 'grit_sansbold' !important;
   font-size: 12px;
   color: #2b4b62;
 }
@@ -389,7 +389,7 @@ input[type='check']:checked+label {
     border-top: none;
     border-bottom: none;
     font-size: 15px;
-    font-family: 'Poppins-Regular', sans-serif !important;
+    font-family: 'libre_franklin' !important;
     font-weight: bold;
 }
   .quantity-label {
@@ -447,7 +447,7 @@ input[type='check']:checked+label {
 .product-detail .menu-items .content-panel {
   padding: 10px 20px 10px 0px;
   cursor: pointer;
-  font-family: 'Poppins-Medium', sans-serif !important;
+  font-family: "'grit_sansbold' !important";
   color: #2b4b62;
   /* max-width: 354px; */
   min-height: 140px;
@@ -506,7 +506,7 @@ input[type='check']:checked+label {
   display: block;
   font-size: 40px;
   font-weight: bold;
-  font-family: 'Poppins-Medium';
+  font-family: 'grit_sansbold' !important;
   text-align: center;
   margin-top: -5px;
   -ms-transform: scaleX(-1) rotate(-35deg);
@@ -574,6 +574,6 @@ input[type='check']:checked+label {
   border-top: none;
   border-bottom: none;
   font-size: 15px;
-  font-family: 'Poppins-Regular', sans-serif !important;
+  font-family: 'libre_franklin' !important;
   font-weight: bold;
 }
