--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -23,7 +23,7 @@
   text-align: left;
 }
 .profile-section .bday-text{
-  font-family: 'Poppins-Bold';
+  font-family: 'sunbornsans_one' !important;
   padding-right: 10px;
   letter-spacing: 0px !important;
 }
@@ -33,7 +33,7 @@
 .body-text
 {
   font-size: 15px;
-  font-family: 'Poppins-Medium', sans-serif !important;
+  font-family: 'grit_sansbold' !important;
   color: #414141;
   padding-top: 8px;
 }
