--- a/src/pages/reward-new/detail/index.css
+++ b/src/pages/reward-new/detail/index.css
@@ -11,7 +11,7 @@
   align-items: center;
 }
 .p-detail {
-  font-family: 'Poppins-Regular', sans-serif !important;
+  font-family: 'libre_franklin' !important;
   font-size: 17px;
   color: #2b4b62;
   width: 100%;
@@ -24,6 +24,6 @@
   text-align: center;
   margin-bottom: auto;
   margin-top: 10px;
-  font-family: 'Poppins-Medium', sans-serif !important;
+  font-family: 'grit_sansbold' !important;
   font-size: 13px;
 }
