--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -1,11 +1,12 @@
 .register-card {
-  margin: 50px auto;
+  margin: 50px auto 90px auto;
   border-radius: 20px !important;
   padding: 50px;
 }
 
 @media screen and (max-width: 468px) {
   .register-card {
+    margin: 50px auto 120px auto;
     padding: 40px 25px;
   }
 }
