--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -25,6 +25,10 @@
   bottom: 0;
   margin-top: 0% !important;
 }
+.footer-confirmation-checkout {
+background-color: #FFCC38;
+margin-top: 0px !important;
+}
 
 @media screen and (min-width: 900px) {
   .footer-control {
