--- a/src/pages/welcome/welcome.css
+++ b/src/pages/welcome/welcome.css
@@ -1,5 +1,5 @@
 .welcome-wrapper {
-  margin: 62px 139px !important;
+  margin: 62px 139px 100px 139px !important;
 }
 
 .welcome-wrapper .welcome-content {
