--- a/src/components/location/location.css
+++ b/src/components/location/location.css
@@ -1,5 +1,5 @@
 .list-wrapper {
-  padding: 0px;
+    padding: 0px 0px 100px 0px;
 }
 .location-sidebar .MuiOutlinedInput-input,
 .location-sidebar .MuiInputLabel {
