--- a/src/pages/iframe/register/register.css
+++ b/src/pages/iframe/register/register.css
@@ -14,12 +14,12 @@
   color: #9f9a9a !important;
   font-size: 14px !important;
   font-weight: 100;
-  font-family: 'libre_franklin' !important;
+  font-family: 'libre_franklinlight' !important;
 }
 .sign-up-section .body-text {
   color: #5C5757 !important;
   font-size: 14px !important;
-  font-family: 'libre_franklin' !important;
+  font-family: 'libre_franklinlight' !important;
   padding-top: 8px;
 }
 .sign-up-section .body-text span {
