--- a/src/components/payment-info/payment-info.css
+++ b/src/components/payment-info/payment-info.css
@@ -89,12 +89,19 @@
     margin: 40px 0px 0px;
   }
 }
+
+@media screen and (max-width: 600px) {
+  .payment-form .image-field.align img {
+    top: 50px;
+    width: 30px;
+  }
+}
 @media screen and (max-width: 468px) {
   .payment-form .add-order button {
     width: 100%;
   }
   .payment-form .image-field.align img {
-    top: 30px;
+    top: 50px;
     width: 30px;
   }
   .payment-form .payment-bar img {
