--- a/src/pages/forgot-password/forgot.css
+++ b/src/pages/forgot-password/forgot.css
@@ -12,7 +12,7 @@
 }
 .forgot-wrapper .login-content h1 {
   margin: 0px 0px 23px 0px;
-  font-size: 30px !important;
+  font-size: 15pt !important;
 }
 .forgot-wrapper .login-content .left-col {
   border-right: none;
@@ -91,7 +91,12 @@
     float: right;
   }
 }
-
+@media screen and (max-width: 600px) {
+.forgot-wrapper .login-content h1 {
+  margin: 0px 0px 23px 0px;
+  font-size: 11pt !important;
+}
+}
 @media screen and (max-width: 468px) {
   .forgot-wrapper {
     margin: 15px 15px 100px 15px !important;
