--- a/src/components/personal-info/index.css
+++ b/src/components/personal-info/index.css
@@ -20,7 +20,7 @@
 .profile-section .date {
   width: 100% !important;
   text-align: left;
-  font-family: "'libre_franklinlight' !important";
+  font-family: 'libre_franklinlight' !important;
   color: black !important;
   letter-spacing: 0px !important;
   font-size: 16px !important;
