--- a/src/pages/check-in/check-in.css
+++ b/src/pages/check-in/check-in.css
@@ -13,7 +13,7 @@
 .body-text
 {
   font-size: 14px !important;
-  font-family: "'grit_sansbold' !important";
+  font-family: 'libre_franklinlight' !important;
   color: #414141;
   padding-top: 14px;
 }
