--- a/src/pages/iframe/stay-current/stay-current.css
+++ b/src/pages/iframe/stay-current/stay-current.css
@@ -30,9 +30,9 @@
   margin: 0;
   color: #58595b;
   display: block;
-  line-height: 25pt;
-  font-size: 17pt;
-  font-weight: 500;
+  line-height: 25px;
+  font-size: 16px;
+  font-weight: 400;
 }
 .stay-connect-actions {
   display: flex;
