--- a/src/pages/order-confirmation/order-confirmation.css
+++ b/src/pages/order-confirmation/order-confirmation.css
@@ -37,7 +37,7 @@ h6.white {
 .order-confirmation .card {
   background-color: #2b4b62;
   background-color: #2b4b62;
-  background-image: url("../../assets/imgs/bg1.png");
+  background-image: url("../../assets/imgs/yellow-bg.png");
   background-size: 70% auto;
   background-position: bottom -45px right -40px;
   background-repeat: no-repeat;
@@ -45,7 +45,7 @@ h6.white {
 }
 
 .order-bg {
-  background-image:url(../../assets/imgs/yellow-bg.png);
+  background-color: #73AAC7;
 }
 .order-confirmation .phone-icon {
   position: absolute;
