--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -6,8 +6,8 @@
 
 legend.heading-ui, h2.heading-ui {
   font-size: 24px;
-  font-family: 'sunbornsans_one' !important;
-  color: #062C43;
+  font-family: 'grit_sansbold' !important;
+  color: #0075BF;
   text-transform: uppercase;
 }
 
