--- a/src/components/cart/upsells/upsells.css
+++ b/src/components/cart/upsells/upsells.css
@@ -28,7 +28,7 @@
   border-bottom: none;
 }
 .upsells-details .quantity button {
-  font-family: 'libre_franklinlight' !important;
+  font-family: 'Libre Franklin' !important;
   font-size: 15px;
   color: #414141;
   font-weight: bold;
@@ -58,7 +58,7 @@
   border-bottom: none;
 }
 .upsells-details .quantity button {
-  font-family: 'libre_franklinlight' !important;
+  font-family: 'Libre Franklin' !important;
   color: #414141;
   font-weight: normal;
 }
