--- a/src/pages/checkout/checkout.css
+++ b/src/pages/checkout/checkout.css
@@ -54,7 +54,7 @@
 }
 .size span {
   font-size: 11px !important;
-  font-family: 'libre_franklin' !important;
+  font-family: 'Libre Franklin' !important;
 }
 .order .add-order {
   text-align: center;
