--- a/src/pages/reset-password/reset.css
+++ b/src/pages/reset-password/reset.css
@@ -57,7 +57,7 @@
 .login-content .caption-grey {
   font-size: 12px;
   text-decoration: none;
-  font-family: 'libre_franklin' !important;
+  font-family: 'Libre Franklin' !important;
   margin-left: 5px;
 }
 
