--- a/src/pages/reward-new/detail/index.css
+++ b/src/pages/reward-new/detail/index.css
@@ -11,7 +11,7 @@
   align-items: center;
 }
 .p-detail {
-  font-family: 'libre_franklin' !important;
+  font-family: 'Libre Franklin' !important;
   font-size: 17px;
   color: #2b4b62;
   width: 100%;
