--- a/src/pages/welcome/welcome.css
+++ b/src/pages/welcome/welcome.css
@@ -130,7 +130,7 @@
 .welcome-content .caption-grey {
   font-size: 12px;
   text-decoration: none;
-  font-family: 'libre_franklin' !important;
+  font-family: 'Libre Franklin' !important;
   margin-left: 5px;
 }
 
