--- a/src/components/cart/upsells/others/index.css
+++ b/src/components/cart/upsells/others/index.css
@@ -51,7 +51,7 @@
 .upsells .content-panel {
   padding: 10px 20px 10px 0px;
   cursor: pointer;
-  font-family: 'libre_franklinlight' !important;
+  font-family: 'Libre Franklin' !important;
   color: #2b4b62;
   /* max-width: 354px; */
   /*min-height: 170px;*/
