--- a/src/components/location/location.css
+++ b/src/components/location/location.css
@@ -3,7 +3,7 @@
 }
 .location-sidebar .MuiOutlinedInput-input,
 .location-sidebar .MuiInputLabel {
-  font-family: 'libre_franklinlight' !important;
+  font-family: 'Libre Franklin' !important;
   font-size: 16px;
 }
 .MuiInputLabel.Mui-focused {
