--- a/src/components/payment-info/payment-info.css
+++ b/src/components/payment-info/payment-info.css
@@ -39,7 +39,7 @@
   top: 45px;
 }
 .add-credit-card-label {
-  font-family: 'libre_franklinlight' !important;
+  font-family: 'Libre Franklin' !important;
   font-size: 14px !important;
 }
 .payment-form .card-fields {
