--- a/src/components/register-form/register-form.css
+++ b/src/components/register-form/register-form.css
@@ -33,7 +33,7 @@
 .sign-up-section .body-text-fav-error {
   color: #E61F00 !important;
   font-size: 14px !important;
-  font-family: 'libre_franklin' !important;
+  font-family: 'Libre Franklin' !important;
   padding-top: 8px;
 }
 .sign-up-section .fav-error-message {
