--- a/src/components/tip/tip.css
+++ b/src/components/tip/tip.css
@@ -4,7 +4,7 @@
   height: 60px;
   font-size: 18pt;
   margin: 20px 18px 0px 0px !important;
-  font-family: 'libre_franklinlight' !important;
+  font-family: 'Libre Franklin' !important;
 }
 .tip-wrapper .action-btn {
   margin-top: 20px;
