--- a/src/pages/iframe/stay-current/stay-current.css
+++ b/src/pages/iframe/stay-current/stay-current.css
@@ -26,7 +26,7 @@
   /* padding-bottom: 15px; */
 }
 .stay-connect-bg p {
-  font-family: 'libre_franklinlight' !important;
+  font-family: 'Libre Franklin' !important;
   margin: 0;
   color: #58595b;
   display: block;
@@ -50,7 +50,7 @@
   transition: all 0.2s ease;
   border: 1px solid;
   border-radius: 5px;
-  font-family: 'libre_franklinlight' !important;
+  font-family: 'Libre Franklin' !important;
   color: #395775;
 }
 .stay-connect-bg .button-right {
@@ -95,7 +95,7 @@
     padding: 30px 16px 30px 16px;
   }
   .stay-connect-bg p {
-    font-family: 'libre_franklinlight' !important;
+    font-family: 'Libre Franklin' !important;
     margin: 0;
     color: #58595b;
     display: block;
