--- a/src/components/payment-info/payment-info.css
+++ b/src/components/payment-info/payment-info.css
@@ -224,4 +224,5 @@ input[type=number] {
   padding: 20px 0px 0px 9px !important;
   color: #062C43 !important;
   font-size: 10px !important;
+  letter-spacing: 1.7px !important;
 }
