--- a/src/pages/invite/invite.css
+++ b/src/pages/invite/invite.css
@@ -6,6 +6,8 @@
   color: black !important;
   justify-content: left !important;
   padding-left: 20px !important;
+  font-family: 'Libre Franklin' !important;
+  font-weight: bold;
 }
 .copy-text {
   text-transform: initial;
