--- a/src/pages/order-confirmation/order-confirmation.css
+++ b/src/pages/order-confirmation/order-confirmation.css
@@ -45,7 +45,7 @@ h6.white {
 }
 
 .order-bg {
-  background-color: #73AAC7;
+  background-image: url("../../assets/imgs/yellow-bg.png");
 }
 .order-confirmation .phone-icon {
   position: absolute;
