--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -5,7 +5,7 @@
 }
 
 legend.heading-ui, h2.heading-ui {
-  font-size: 24px;
+  font-size: 18px;
   font-family: 'grit_sansbold' !important;
   color: #0075BF;
   text-transform: uppercase;
@@ -28,7 +28,7 @@ margin-bottom: 20px;
 
 .product-detail .label.bold {
   font-family: 'Libre Franklin' !important;
-  font-size: 18px !important;
+  font-size: 16px !important;
   text-transform: capitalize !important;
   line-height: 1.2;
   font-weight: bold;
@@ -454,6 +454,7 @@ input[type='check']:checked+label {
   color: #2b4b62;
   /* max-width: 354px; */
   min-height: 140px;
+  font-weight: bold;
   font-size: 18px;
   -webkit-appearance: none;
   -moz-appearance: none;
