--- a/src/pages/reward-new/index.css
+++ b/src/pages/reward-new/index.css
@@ -38,7 +38,7 @@
   margin: 20px 0 25px 0;
 }
 #reward-points-container .bold-title {
-  font-family: 'Libre Franklin' !important;
+  font-family: 'grit_sansbold' !important;
   font-size: 30px;
   text-transform: uppercase;
   font-weight: bold;
@@ -145,12 +145,11 @@
 #reward-points-container .reward-point-merge-panel .button {
   margin: 0;
   line-height: 20px;
-  letter-spacing: 2px;
   text-transform: uppercase;
   font-family: 'Libre Franklin' !important;
   color: #0075bf;
-  font-size: 15px;
-  font-weight: 600;
+  font-size: 13px;
+  font-weight: bold;
   cursor: pointer;
 }
 #reward-points-container .reward-point-merge-panel .button.disable {
