--- a/src/pages/forgot-password/forgot.css
+++ b/src/pages/forgot-password/forgot.css
@@ -1,5 +1,5 @@
 .forgot-wrapper {
-  margin: 62px 139px 100px 139px !important;
+  margin: 62px 139px !important;
 }
 .forgot-wrapper .login-content {
   background: white;
