--- a/src/pages/login2/login2.css
+++ b/src/pages/login2/login2.css
@@ -1,5 +1,5 @@
 .login-wrapper {
-  margin: 62px 139px 100px 139px !important;
+  margin: 62px 139px !important;
 }
 .login-content {
   background: white;
