--- a/src/pages/login2/login2.css
+++ b/src/pages/login2/login2.css
@@ -120,7 +120,7 @@
 
 @media screen and (max-width: 600px) {
   .login-wrapper {
-    margin: 15px 15px 100px 15px !important;
+    margin: 15px 15px !important;
   }
   .login-wrapper .login-content {
     padding: 30px;
