--- a/src/pages/forgot-password/forgot.css
+++ b/src/pages/forgot-password/forgot.css
@@ -99,7 +99,7 @@
 }
 @media screen and (max-width: 468px) {
   .forgot-wrapper {
-    margin: 15px 15px 100px 15px !important;
+    margin: 15px 15px  !important;
   }
   .login-content {
     padding: 30px;
