--- a/src/pages/welcome/welcome.css
+++ b/src/pages/welcome/welcome.css
@@ -207,7 +207,7 @@
 
 @media screen and (max-width: 468px) {
   .welcome-wrapper {
-    margin: 25px 0px 100px 0px !important;
+    margin: 25px 0px !important;
   }
 
   .welcome-content {
