--- a/src/components/order-details/order-details.css
+++ b/src/components/order-details/order-details.css
@@ -4,7 +4,7 @@
   -webkit-border-radius: 30px;
   -moz-border-radius: 30px;
   border-radius: 30px;
-  margin: 50px auto 100px auto !important;
+  margin: 50px auto !important;
 }
 
 .order-details-checkout {
