--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -40,8 +40,9 @@ margin-bottom: 125px !important;
 margin-bottom: 120px !important;
 }
 .footer-img-logo {
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
+  margin-left: 18px;
 }
 
 }
